# limabean-booking

./: .gitattributes  .gitignore  10-overview.html  20-installation.html  30-getting-started.html  40-plugins.html  50-development.html  60-differences.html  70-design-and-rationale.html  Cargo.toml  README.md  flake.nix  index.html  justfile  limabean.core.filters.html  limabean.core.inventory.html  limabean.core.journal.html  limabean.core.registry.html  limabean.core.rollup.html  limabean.core.xf.html  limabean.html
.github/workflows/: release.yml  test-suite.yml
clj/: CHANGELOG.md  README.md  build.clj  deps.edn  pom.xml
clj/doc/: 10-overview.md  20-installation.md  30-getting-started.md  40-plugins.md  50-development.md  60-differences.md  70-design-and-rationale.md  intro.md
clj/src/: limabean.clj
clj/src/limabean/: app.clj  main.clj  user.clj
clj/src/limabean/adapter/: beanfile.clj  exception.clj  logging.clj  shell.clj  show.clj  tabulate.clj  user_clj.clj
clj/src/limabean/core/: cell.clj  filters.clj  inventory.clj  journal.clj  registry.clj  rollup.clj  xf.clj
clj/test/limabean/: app_test.clj
clj/test/limabean/adapter/: beanfile_test.clj
clj/test/limabean/core/: filters_test.clj
examples/beancount/: full.beancount
examples/clj/: deps.edn  user.clj
examples/clj/src/: user.clj
rust/: Cargo.toml
rust/limabean/: Cargo.toml
rust/limabean-booking/: Cargo.toml
rust/limabean-booking/src/: interpolate.rs  lib.rs  public_types.rs  tests.rs
rust/limabean-booking/src/features/: lima_parser_types.rs
rust/limabean-booking/src/tests/: helpers.rs  positions.rs
scripts.dev/: get-version.sh  limabean.dev
src/: book.rs  categorize.rs  errors.rs  features.rs  internal_types.rs  interpolate.rs  lib.rs  public_types.rs  reductions.rs  tolerance.rs
src/features/: lima_parser_types.rs  rust_decimal.rs
src/tests/: booking.rs  helpers.rs
test-cases/: auto-accounts.beancount  balance.beancount  full.beancount  simple.beancount  tolerance.beancount
test-cases/auto-accounts.golden/: directives.edn
test-cases/balance.golden/: inventory  journal  rollup
test-cases/full.golden/: inventory  journal  rollup
test-cases/simple.golden/: inventory  journal  rollup
test-cases/tolerance.golden/: directives.edn
test-cases/trading.golden/: inventory  journal  rollup
