[package]
name = "limabean-booking"
version = "0.9.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Beancount booking algorithms for limabean"
homepage = "https://github.com/tesujimath/limabean"
repository = "https://github.com/tesujimath/limabean"
readme = "README.md"

[dependencies]
beancount-parser-lima = { version = "0.15.0", optional = true }
# beancount-parser-lima = { version = "0.15.0", path = "../beancount-parser-lima", optional = true }
rust_decimal = { version = "1.37.2", optional = true }
hashbrown = { version = "0.15.4" }
strum_macros = { version = "0.27.2" }
time = { version = "0.3.41" }
tracing = { version = "0.1.41" }

[dev-dependencies]
beancount-parser-lima = { version = "0.15.0" }
# beancount-parser-lima = { version = "0.15.0", path = "../beancount-parser-lima" }
rstest = { version = "0.26.1" }
rust_decimal_macros = { version = "1.37.2" }
time = { version = "0.3.41", features = ["macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["lima-parser-types", "rust-decimal"]
rust-decimal = ["dep:rust_decimal"]
lima-parser-types = ["dep:beancount-parser-lima", "dep:rust_decimal"]
