[package]
name = "limabean-booking"
version = "0.10.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Beancount booking algorithms for limabean"
homepage = "https://github.com/tesujimath/limabean"
repository = "https://github.com/tesujimath/limabean"
readme = "README.md"

[dependencies]
beancount-parser-lima = { version = "0", optional = true }
rust_decimal = { version = "1.37", optional = true }
hashbrown = { version = "0.15" }
strum_macros = { version = "0.27" }
time = { version = "0.3" }
tracing = { version = "0.1" }

[dev-dependencies]
beancount-parser-lima = { version = "0" }
rstest = { version = "0.26" }
rust_decimal_macros = { version = "1.37" }
time = { version = "0.3", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["lima-parser-types", "rust-decimal"]
rust-decimal = ["dep:rust_decimal"]
lima-parser-types = ["dep:beancount-parser-lima", "dep:rust_decimal"]
