[workspace]
resolver = "3"
members = ["limabean", "limabean-booking"]

[workspace.dependencies]
beancount-parser-lima = "0.14.3"
# beancount-parser-lima = { version = "0.14.2", path = "../../beancount-parser-lima" }
hashbrown = "0.15.4"
rstest = "0.26.1"
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.2"
strum_macros = "0.27.2"
time = "0.3.41"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
