[package]
name = "limabean"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Beancount frontend using Rust and Clojure and the Lima parser"
homepage = "https://github.com/tesujimath/limabean"
repository = "https://github.com/tesujimath/limabean"
readme = "../../README.md"

[[bin]]
name = "limabean"
path = "src/bin/limabean/main.rs"

[[bin]]
name = "limabean-pod"
path = "src/bin/limabean-pod/main.rs"

[dependencies]
limabean-booking = { path = "../limabean-booking", version = "0.7.0", features = [
  "lima-parser-types",
  "rust-decimal",
] }
beancount-parser-lima = { workspace = true }
rust_decimal = { workspace = true }
hashbrown = { workspace = true }
time = { workspace = true, features = ["local-offset", "parsing"] }
clap = { version = "4.5.42", features = ["derive"] }
csv = "1.3.1"
slugify = "0.1.0"
sgmlish = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
regex = "1.11.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
strum = "0.27.2"
strum_macros = { workspace = true }
joinery = "3.1.0"
tabulator = { version = "0.5.0", features = [
  "bin",
  "num-bigint",
  "rust_decimal",
] }
itertools = "0.14.0"
xdg = "3.0.0"
# tabulator = { path = "../../../tabulator", features = [
#   "bin",
#   "num-bigint",
#   "rust_decimal",
# ] }

[dev-dependencies]
rstest = { workspace = true }
rust_decimal_macros = { workspace = true }
time = { version = "0.3.41", features = ["macros"] }

[build-dependencies]
build-deps = "0.1.4"
